welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:3: error: '(' expected but identifier found.
                                  else if A<B return A else return B}
                                          ^close10:3: error: illegal start of simple expression
                                  else if A<B return A else return B}
                                                                    ^