welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {var A:Int=Math.abs(10-a); var B=Math.abs(10-b)
                                  if (A==B) {if (a>b) return b else return a}
                                  else if A<B return A else return B}
                                         